--- a/bin/application/Main.fxml
+++ b/bin/application/Main.fxml
@@ -34,7 +34,7 @@
                           <content>
                             <AnchorPane>
                                  <children>
-                                    <ImageView fx:id="imageView1" fitHeight="150.0" fitWidth="200.0" onMouseMoved="#rasterImage" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <ImageView fx:id="imageView1" fitHeight="150.0" fitWidth="200.0" onMouseMoved="#rasterImage" onMousePressed="#pressImage" onMouseReleased="#releaseImage" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                  </children>
                               </AnchorPane>
                           </content>
@@ -176,13 +176,28 @@
                               </AnchorPane>
                            </content>
                         </TitledPane>
-                        <TitledPane animated="false" layoutX="10.0" layoutY="72.0" text="Challenges">
+                        <TitledPane animated="false" layoutX="10.0" layoutY="60.0" text="Add/Subtract">
                            <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <VBox layoutX="64.0" layoutY="-49.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
-                                          <Button mnemonicParsing="false" onAction="#challenge01" text="Challenge 1" />
+                                          <VBox prefHeight="42.0" prefWidth="193.0">
+                                             <children>
+                                                <Label text="Opacity" />
+                                                <Slider fx:id="sliderOpacityImage" max="1.0" showTickMarks="true" value="0.1" />
+                                             </children>
+                                          </VBox>
+                                          <HBox prefHeight="100.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" onAction="#subtract" text="Subtract">
+                                                   <HBox.margin>
+                                                      <Insets right="15.0" />
+                                                   </HBox.margin>
+                                                </Button>
+                                                <Button mnemonicParsing="false" onAction="#add" text="Add" />
+                                             </children>
+                                          </HBox>
                                        </children>
                                     </VBox>
                                  </children>
@@ -191,6 +206,19 @@
                         </TitledPane>
                     </panes>
                   </Accordion>
+                  <TitledPane animated="false" text="Challenges">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <VBox layoutX="64.0" layoutY="-49.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#challenge01" text="Challenge 1" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
