--- a/bin/application/Main.fxml
+++ b/bin/application/Main.fxml
@@ -19,9 +19,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<AnchorPane prefHeight="845.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
-      <BorderPane layoutX="-286.0" prefHeight="689.0" prefWidth="1542.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="-286.0" prefHeight="852.0" prefWidth="1542.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
@@ -89,9 +89,9 @@
             </HBox>
          </center>
          <left>
-            <VBox prefHeight="610.0" prefWidth="234.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="721.0" prefWidth="234.0" BorderPane.alignment="CENTER">
                <children>
-                  <Accordion prefHeight="549.0" prefWidth="214.0">
+                  <Accordion prefHeight="725.0" prefWidth="214.0">
                     <panes>
                       <TitledPane animated="false" text="Grayscale">
                         <content>
@@ -352,11 +352,11 @@
                               </AnchorPane>
                            </content>
                         </TitledPane>
-                        <TitledPane animated="false" layoutX="10.0" layoutY="289.0" text="OpenCV">
+                        <TitledPane animated="false" layoutX="10.0" layoutY="289.0" prefWidth="214.0" text="OpenCV">
                            <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <VBox layoutX="64.0" layoutY="-49.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox layoutX="36.0" layoutY="24.0" prefHeight="246.0" prefWidth="164.0" AnchorPane.bottomAnchor="-82.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <Button mnemonicParsing="false" onAction="#faceDetection" text="Face detection" />
                                           <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#dilation" text="Dilation">
@@ -365,6 +365,31 @@
                                              </VBox.margin>
                                           </Button>
                                           <Button layoutX="10.0" layoutY="51.0" mnemonicParsing="false" onAction="#erosion" text="Erosion" />
+                                          <Button layoutX="10.0" layoutY="92.0" mnemonicParsing="false" onAction="#canny" text="Canny">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                          <Button layoutX="10.0" layoutY="133.0" mnemonicParsing="false" onAction="#sobel" text="Sobel">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                          <Button layoutX="10.0" layoutY="174.0" mnemonicParsing="false" onAction="#laplace" text="Laplace">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                          <Button layoutX="10.0" layoutY="215.0" mnemonicParsing="false" onAction="#prewitt" text="Prewitt">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                          <Button layoutX="10.0" layoutY="215.0" mnemonicParsing="false" onAction="#test" text="Test">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
                                        </children>
                                     </VBox>
                                  </children>
